fixed mobile view via meta/viewport line in layout.erb, tweaked content and comments

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
-<html >
+<html>
+
 <head>
-  <meta charset="UTF-8">
   <title>Tribute Page</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">  <!-- added to get scaled view on mobile -->
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="/images/favicon.ico?" type="image/x-icon">  <!-- added to get favicon to load -->
+<!--   Knocking out the jQuery for now
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
-  <script type="text/javascript" src="jquery.js"></script>
+  <script type="text/javascript" src="jquery.js"></script> -->
 </head>
 
 <body>
+
   <div class="container-fluid body">
   <h1>Anpanman</h1>
   <h3 style="font-style: italic">Beloved hero of Japanese culture and cuisine</h3>
+
   <div class="red-background">
     <img class="img-responsive center-block oval" src="/images/1.jpg" alt="Anpanaman flying.">
   </div>
+
   <div>
     <h3>Origin</h3>
     <div class="row">
@@ -29,6 +35,7 @@
       </div>
     </div>
   </div>
+
   <div>
     <h3>Lessons in Morality</h3>
     <div class="row">
@@ -51,6 +58,7 @@
       </div>
     </div>
   </div>
+
   <div>
     <h3>Lessons in Culture</h3>
     <div class="row">
@@ -63,21 +71,23 @@
       </div>
     </div>
   </div>
+
   <div>
     <h3>Lessons in Language</h3>
     <div class="row">
       <div class="col-xs-7">
-        <p>Finally, Anpanaman helps introduce the written Japanese language, through frequent usage of the characters that make up the first Japanese phonetic alphabet, hiragana.<br><br>Songs with subtitles are frequently employed to help children associate the sounds they hear with the symbols.<br><br><i>To give you an idea of what children must learn, please see the <b>Hiragana-Romaji Table</b> listed below.</i></p>
+        <p>Finally, Anpanaman helps introduce the written Japanese language, through frequent usage of the characters that make up the first Japanese phonetic alphabet, hiragana.<br><br>Songs with subtitles are frequently employed to help children associate the sounds they hear with the symbols.<br><br><i>To give you an idea of what children must learn, please see the <b>Hiragana<!-- -Romaji  # original version--> Table</b> listed below.</i></p>
       </div>
       <div class="col-xs-5 red-background">
         <img class="center-block oval img-responsive-max" src="/images/5.jpg"  alt="Anpanman theme song">
         <p class="caption-text">Anpanman theme song</p>
       </div>
     </div>
-  </div>
-  <br>
+  </div><br>
+
   <div>
-    <h3>Hiragana-Romaji Table</h3>
+    <h3>Hiragana Table</h3>
+    <!-- <h3>Hiragana-Romaji Table</h3>  # original version -->
     <div class="red-background">
       <table id="hiragana">
         <tr id="row1">
@@ -151,24 +161,27 @@
           <td><button class="even" id="char50">ん</button></td>
         </tr>
       </table>
-      <p class="caption-text">Click on a character to switch between hiragana and romaji.</p>
+<!--       <p class="caption-text">Click on a character to switch between hiragana and romaji.</p>  # original version-->
     </div>
   </div>
-  <br>
-</div>
-<div>
-  <div class="yellow-background">
-    <h3 style="text-align: left">“No matter what country you are from, no matter where you stand, offering food to those who are hungry is a good deed. It is justice in the most absolute sense.”</h3>
-    <h5 style="text-align: right">- Takashi Yanase</h5>
+
+  <div>
+    <div class="yellow-background">
+      <h3 style="text-align: left">“No matter what country you are from, no matter where you stand, offering food to those who are hungry is a good deed. It is justice in the most absolute sense.”</h3>
+      <h5 style="text-align: right">- Takashi Yanase</h5>
+    </div>
   </div>
-</div>
-<div>
-  <div class="yellow-background">
-  <h4>If you would like to learn more about Anpanman and his friends, please see this <a href="http://www.awgosh.com/anpanmanchara.html">Anpanman Characters</a> page.<br><br>You might enjoy Anpanman's official website (Japanese): <a href="http://www.anpanman.jp">アンパンマンポータルサイト</a></h4>
+
+  <div>
+    <div class="yellow-background">
+    <h4>If you would like to learn more about Anpanman and his friends, please see this <a href="http://www.awgosh.com/anpanmanchara.html">Anpanman Characters</a> page.<br><br>You might enjoy Anpanman's official website (Japanese): <a href="http://www.anpanman.jp">アンパンマンポータルサイト</a></h4>
+    </div>
   </div>
-</div>
-<div>
-  <p style="text-align: center"><br>Written and coded by <a href="https://www.linkedin.com/in/johnverbosky">John C. Verbosky</a>.</p>
-</div>
+
+  <div>
+    <p style="text-align: center"><br>Written and coded by <a href="https://www.linkedin.com/in/johnverbosky">John C. Verbosky</a>.</p>
+  </div>
+
 </body>
+
 </html>
