--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,9 +8,9 @@
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="/images/favicon.ico?" type="image/x-icon">  <!-- added to get favicon to load -->
-<!--   Knocking out the jQuery for now
+  <!-- Knocking out the jQuery for now -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
-  <script type="text/javascript" src="jquery.js"></script> -->
+  <script type="text/javascript" src="jquery.js"></script>
 </head>
 
 <body>
@@ -76,7 +76,7 @@
     <h3>Lessons in Language</h3>
     <div class="row">
       <div class="col-xs-7">
-        <p>Finally, Anpanaman helps introduce the written Japanese language, through frequent usage of the characters that make up the first Japanese phonetic alphabet, hiragana.<br><br>Songs with subtitles are frequently employed to help children associate the sounds they hear with the symbols.<br><br><i>To give you an idea of what children must learn, please see the <b>Hiragana<!-- -Romaji  # original version--> Table</b> listed below.</i></p>
+        <p>Finally, Anpanaman helps introduce the written Japanese language, through frequent usage of the characters that make up the first Japanese phonetic alphabet, hiragana.<br><br>Songs with subtitles are frequently employed to help children associate the sounds they hear with the symbols.<br><br><i>To give you an idea of what children must learn, please see the <b>Hiragana<!-- -Romaji  # original version--> Table</b> shown here.</i></p>
       </div>
       <div class="col-xs-5 red-background">
         <img class="center-block oval img-responsive-max" src="/images/5.jpg"  alt="Anpanman theme song">
